Start with normal javascript

--- a/working/index.html
+++ b/working/index.html
@@ -10,7 +10,43 @@
 </head>
 <body>
     <div class="container">
+        <div class="calculator">
+            <form>
+                <div class="display" id="display">
+                    <input type="text" name="display" id="in1">
+                </div>
+                <div>
+                    <input type="button" value="AC" id="in2">
+                    <input type="button" value="DE" id="in3">
+                    <input type="button" value="."  id="in4">
+                    <input type="button" value="/"  id="in5">
+                </div>
+                <div>
+                    <input type="button" value="7"  id="in6">
+                    <input type="button" value="8"  id="in7">
+                    <input type="button" value="9"  id="in8">
+                    <input type="button" value="*"  id="in9">
+                </div>
+                <div>
+                    <input type="button" value="4"  id="in10">
+                    <input type="button" value="5"  id="in11">
+                    <input type="button" value="6"  id="in12">
+                    <input type="button" value="-"  id="in13">
+                </div>
+                <div>
+                    <input type="button" value="1"  id="in14">
+                    <input type="button" value="2"  id="in15">
+                    <input type="button" value="3"  id="in16">
+                    <input type="button" value="+"  id="in17">
+                </div>
+                <div>
+                    <input type="button" value="00" id="in18">
+                    <input type="button" value="0"  id="in19">
+                    <input type="button" value="=" class="equal" id="in20">
 
+                </div>
+            </form>
+        </div>
     </div>
 
 
